# cmd/api/server/routes.go
@@ -14,5 +14,6 @@ func (s *Server) linkRoutes() {
 		v1Grp.PUT("/book/:id", s.hnd.book.UpdatedBook)
 		v1Grp.GET("/book/:name", s.hnd.book.GetBookByName)
 		v1Grp.GET("/book/get/:id", s.hnd.book.GetBookByID)
+		v1Grp.GET("/books", s.hnd.book.ListBook)
 	}
 }
