# service/book/model.go
@@ -1,5 +1,7 @@
 package book
 
+import "library/ent"
+
 type CreateBookModel struct {
 	Title     string `json:"title"`
 	Author    string `json:"author"`
@@ -14,4 +16,25 @@ type UpdateBookModel struct {
 	Genre     string `json:"genre"`
 	Height    string `json:"height"`
 	Publisher string `json:"publisher"`
+}
+
+type GetBookModel struct {
+	Title     string `json:"title"`
+	Author    string `json:"author"`
+	Genre     string `json:"genre"`
+	Height    string `json:"height"`
+	Publisher string `json:"publisher"`
+}
+
+type GetBookByName struct {
+	Title     string `json:"title"`
+	Author    string `json:"author"`
+	Genre     string `json:"genre"`
+	Height    string `json:"height"`
+	Publisher string `json:"publisher"`
+}
+
+type ListBookResponse struct {
+	RowCount int
+	Data     []*ent.Book
 }
